@@ -1,27 +1,43 @@
 package com.andresfranco.testspring.controllers;
-
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.RequestMapping;
-import com.andresfranco.testspring.repositories.UserRepository;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import com.andresfranco.testspring.model.User;
 import org.springframework.web.bind.annotation.RequestMethod;
+import com.andresfranco.testspring.commands.UserForm;
+import com.andresfranco.testspring.converters.UserToUserForm;
+import com.andresfranco.testspring.services.UserService;
+import javax.validation.Valid;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.validation.BindingResult;
+import java.util.Map;
+import java.util.HashMap;
 
 @Controller
 public class UserController extends GeneralController {
 
-    private UserRepository userRepository;
+    private UserService userService;
+    private UserToUserForm userToUserForm;
+  
 
-    public UserController(UserRepository userRepository) {
-        this.userRepository = userRepository;
+     @Autowired
+    public void setUserToUserForm(UserToUserForm userToUserForm) {
+        this.userToUserForm = userToUserForm;
     }
+
+    @Autowired
+    public void setUserService(UserService userService) {
+        this.userService = userService;
+    }
+    
+  
 
     @RequestMapping("/users")
     public String getUsers(Model model) {
 
-        model.addAttribute("users", userRepository.findAll());
+        model.addAttribute("users", userService.listAll());
         model.addAttribute("showRoute", this.setRoute("users", "show", ""));
         model.addAttribute("editRoute", this.setRoute("users", "edit", ""));
         model.addAttribute("newRoute", this.setRoute("users", "new", ""));
@@ -32,48 +48,52 @@ public class UserController extends GeneralController {
     @RequestMapping("/users/show/{userId}")
     public String ShowUser(@PathVariable String userId, Model model) {
 
-        model.addAttribute("user", userRepository.findById(new Long(userId)).get());
+        model.addAttribute("user", userService.getById(new Long(userId)));
         model.addAttribute("indexRoute", this.setRoute("users", "index", ""));
+        model.addAttribute("title", "User Details"); 
         return "users/show";
     }
 
     @RequestMapping("/users/edit/{userId}")
     public String EditUser(@PathVariable String userId, Model model) {
         
-        model.addAttribute("user", userRepository.findById(new Long(userId)).get());
+        User user = userService.getById(Long.valueOf(userId));
+        UserForm userForm = userToUserForm.convert(user);
+        model.addAttribute("userForm", userForm);
+         model.addAttribute("title", "Edit User");
         model.addAttribute("indexRoute", this.setRoute("users", "index", ""));
-        model.addAttribute("actionRoute",this.setRoute("users", "update", ""));
-        return "users/addEdit";
+        
+        return "users/userform";
     }
     
      @RequestMapping("/users/new")
     public String NewUser(Model model) {
         
-        model.addAttribute("user", new User());
+        model.addAttribute("userForm", new UserForm());
+        model.addAttribute("title", "New User");
         model.addAttribute("indexRoute", this.setRoute("users", "index", ""));
-        model.addAttribute("actionRoute",this.setRoute("users", "create", ""));
-        return "users/addEdit";
+         
+        return "users/userform";
     }
     
-     @RequestMapping(value="users/create", method = RequestMethod.POST)
-    public String CreateUser(User user) {
-       
-        this.userRepository.save(user);
-        return "redirect:"+this.setRoute("users", "index", "");
+    @RequestMapping(value = "/user", method = RequestMethod.POST)
+    public String saveOrUpdateProduct(@Valid UserForm userForm, BindingResult bindingResult){
+
+        if(bindingResult.hasErrors()){
+            return "users/productform";
+        }
+
+        User savedUser = userService.saveOrUpdateUserForm(userForm);
+         
+        return "redirect:/users/show/" + savedUser.getUserId();
     }
     
-     @RequestMapping(value="users/update", method = RequestMethod.POST)
-    public String UpdateUser(User user) {
-       
-        this.userRepository.save(user);
-        return "redirect:"+this.setRoute("users", "index", "");
-    }
     
     @RequestMapping(value="users/delete/{userId}", method = RequestMethod.DELETE)
     public String DeleteUser(@PathVariable String userId) {
-       
-        this.userRepository.deleteById(new Long(userId));
+     
+        userService.delete(new Long(userId));
         return "redirect:"+this.setRoute("users", "index", "");
     }
-
+    
 }
